
      - The aforementioned changes to the index logic will only apply when a
      distribution is pulled to a stack where it isn't already registered.
      Existing indexes will not spontaneously change just by upgrading Pinto.  If
      you wish to apply the new index logic to a distribution that already lives
      in a certain stack, first use the "unregister" command to remove it from
      the index and then use the "register" command to bring it back using the
      new index logic.

0.098     2014-01-27 16:49:14 America/Los_Angeles

      [IMPORTANT]

      - This release contains a lot of new features.  I strongly recommend
      reading the manual pages for the "pull", "add", "log",  and "diff"
      commands as well as "pinto" itself for further explanation of the
      enhancements mentioned below.

      - Many of the new features in this release were financed by the Perl
      community through a crowdfunding campaign.  Thank you for your support.
      Go to http://tinyurl.com/gopinto to see how it all happened.

      [ENHANCEMENTS]

      - Pinto can now use a web service provided by stratopan.com to locate
      upstream packages and distributions.  This can reduce memory consumption
      during the "pull" and "add" commands by about 50%.  And for distributions
      with few dependencies, it can increase the speed of those commands by as
      much as 300%.  This feature will be enabled by default for new
      repositories. For existing repositories it must be enabled manually by
      adding "http://cpan.stratopan.com" as the (usually first) upstream
      source in your repository configuration file.

      - The "pull" command can now fetch a precise version of a package using
      a version specification string such as "Moose==1.34" or "Plack>=2,!=4".
      This means you can quickly build a repository with your current
      depedencies and you only need to know the package name and version.